# Nebula-Music

./: .gitignore  CMakeLists.txt  Main.qml  NebulaCenter.cpp  NebulaCenter.h  README.md  com.nebula.Tahoe.desktop  com.nebula.Tahoe.metainfo.xml  com.nebula.Tahoe.yml  com.nebula.json  com.nebula.nebulaV2.desktop  main.cpp  player.h  resources.qrc
core/: NebulaPlayer.cpp  NebulaPlayer.h
data/: DataManager.cpp  DataManager.h
mpris/: MprisHandler.cpp  MprisHandler.h
visualizer/: AudioVisualizer.qml
